# gPb

./: .gitignore  CMakeLists.txt  gPb.pro  todo.txt
MPbGUI/: CMakeLists.txt  main.cpp  mpbguicentralwidget.cpp  mpbguicentralwidget.h  mpbguimainwindow.cpp  mpbguimainwindow.h  scrollareaimage.cpp  scrollareaimage.h
TextonGenerator/: argumentlist.cpp  main.cpp  textons.pro
Textons/: CMakeLists.txt  argumentlist.h  gaussianfilter.h  gaussianfirstderivativefilter.h  gaussiansecondderivativefilter.h  main.cpp  textongenerator.cpp  textongenerator.h  textonkernel.cpp  textonkernel.h
common/: CMakeLists.txt  common.pro  discinversemasks.cpp  filterbank.cpp  filterbank.h
common/textons/: gaussianfilter.cpp  gaussianfirstderivativefilter.cpp  gaussiansecondderivativefilter.cpp  texton.cpp  texton.h  textongenerator.cpp  textongenerator.h  textonkernel.cpp  textontools.cpp  textontools.h
cpuMPb/: CMakeLists.txt  main.cpp
cpuPb/: CMakeLists.txt  pbdetector.cpp  pbdetector.h
cudaMPb/: CMakeLists.txt  cudampb.cu  cudampb.h
cudaMPbTools/: CMakeLists.txt  cudaimage.cu  cudaimage.h  cvector.h
cudaPb/: CMakeLists.txt  cudapbdetector.cu  cudapbdetector.h  histoallocator.cu  histoallocator.h
gPb_paper/: ImplementationCPU.tex  gPbPaper1.tex  gPb_GPU_pres_short.tex  gPb_pres.tex
mPb/: CMakeLists.txt  discdirectmasks.cpp  discdirectmasks.h  discinversemasks.cpp  discinversemasks.h  mPb.cpp  mPb.h  mPb.pro  main.cpp  pbdetector.cpp  pbdetector_cuda.cpp  pbdetector_cuda.h
testMPb/: CMakeLists.txt  main.cpp
